--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -1,11 +1,18 @@
 {
-  "title": "Matkamme",
-  "description": {
-    "2021": "Työskentely portsarina.",
-    "2022": "Aloitimme matkamme pienellä mutta intohimoisella tiimillä.",
-    "2023": "Laajensimme palveluitamme ja saavutimme uusia virstanpylväitä.",
-    "2024": "Julkaisimme innovatiivisia markkinointikampanjoita ja kasvatimme asiakaskuntaamme.",
-    "2025": "Saavutimme alan tunnustusta ja asetimme uusia standardeja."
+  "menuItems": {
+    "about": "TIETOA",
+    "prices": "HINNAT",
+    "portfolio": "PORTFOLIO",
+    "contact": "YHTEYSTIEDOT"
   },
-  "changeLanguage": "Vaihda kieli"
+  "ourJourney": {
+    "title": "Matkamme",
+    "descriptions": {
+      "2021": "Työ portsarina.",
+      "2022": "Aloitimme matkamme pienellä mutta intohimoisella tiimillä.",
+      "2023": "Laajensimme palveluitamme ja saavutimme uusia virstanpylväitä.",
+      "2024": "Käynnistimme innovatiivisia markkinointikampanjoita ja kasvatimme asiakaskuntaamme.",
+      "2025": "Saavutimme alan tunnustusta ja asetimme uusia standardeja."
+    }
+  }
 }
